--- a/test/extraction-grid-test.html
+++ b/test/extraction-grid-test.html
@@ -45,25 +45,29 @@ limitations under the License.
             text: 'text2'
           }]
         }, {
+          icon: 'iconA',
           name: 'name3',
+          styleClass: 'styleClassA',
           data: [{
-            icon: 'icon',
-            styleClass: 'styleClass',
             text: 'text3'
           }, {
-            link: 'link',
+            link: 'linkA',
             text: 'text4'
           }]
         }, {
+          icon: 'iconB',
           name: 'name4',
+          styleClass: 'styleClassB',
           data: [{
             confidence: 100,
+            link: 'linkB',
             text: 'text5'
           }, {
             confidence: 50,
+            link: 'linkC',
             provenances: [{
-              method: 'provenanceMethod1',
-              text: 'provenanceText1'
+              method: 'method1',
+              text: 'text1'
             }],
             text: 'text6'
           }]
@@ -87,12 +91,15 @@ limitations under the License.
         expect(element.dataTypeProperty).to.equal('type');
         expect(element.dataWidthProperty).to.equal('width');
         expect(element.hideConfidences).to.be.false;
+        expect(element.iconProperty).to.equal('icon');
         expect(element.nameProperty).to.equal('name');
         expect(element.resultId).to.equal('1234');
         expect(element.resultType).to.equal('document');
         expect(element.showProvenances).to.not.exist;
+        expect(element.styleClassProperty).to.equal('styleClass');
         expect(element.tagManager).to.not.exist;
         expect(element.target).to.equal('_self');
+        expect(element.widthProperty).to.equal('width');
       });
 
       test('extractions are set as expected', function() {
@@ -105,25 +112,29 @@ limitations under the License.
             text: 'text2'
           }]
         }, {
+          icon: 'iconA',
           name: 'name3',
+          styleClass: 'styleClassA',
           data: [{
-            icon: 'icon',
-            styleClass: 'styleClass',
             text: 'text3'
           }, {
-            link: 'link',
+            link: 'linkA',
             text: 'text4'
           }]
         }, {
+          icon: 'iconB',
           name: 'name4',
+          styleClass: 'styleClassB',
           data: [{
             confidence: 100,
+            link: 'linkB',
             text: 'text5'
           }, {
             confidence: 50,
+            link: 'linkC',
             provenances: [{
-              method: 'provenanceMethod1',
-              text: 'provenanceText1'
+              method: 'method1',
+              text: 'text1'
             }],
             text: 'text6'
           }]
@@ -137,24 +148,94 @@ limitations under the License.
       });
 
       test('does show extraction-name elements', function() {
-        var names = Polymer.dom(element.root).querySelectorAll('.extraction-name');
+        var names = Polymer.dom(element.root).querySelectorAll('.extraction-name icon-label');
         expect(names).to.exist;
         expect(names.length).to.equal(3);
-        expect(names[0].innerHTML).to.equal('name2');
-        expect(names[1].innerHTML).to.equal('name3');
-        expect(names[2].innerHTML).to.equal('name4');
+
+        expect(names[0].icon).to.not.exist;
+        expect(names[0].iconStyleClass).to.not.exist;
+        expect(names[0].link).to.equal('');
+        expect(names[0].target).to.equal('_self');
+        expect(names[0].text).to.equal('name2');
+        expect(names[0].textTitleTooltip).to.equal('name2');
+        expect(names[0].width).to.not.exist;
+        expect(names[0].getAttribute('tappable')).to.not.exist;
+
+        expect(names[1].icon).to.equal('iconA');
+        expect(names[1].iconStyleClass).to.equal('styleClassA');
+        expect(names[1].link).to.equal('');
+        expect(names[1].target).to.equal('_self');
+        expect(names[1].text).to.equal('name3');
+        expect(names[1].textTitleTooltip).to.equal('name3');
+        expect(names[1].width).to.not.exist;
+        expect(names[1].getAttribute('tappable')).to.not.exist;
+
+        expect(names[2].icon).to.equal('iconB');
+        expect(names[2].iconStyleClass).to.equal('styleClassB');
+        expect(names[2].link).to.equal('');
+        expect(names[2].target).to.equal('_self');
+        expect(names[2].text).to.equal('name4');
+        expect(names[2].textTitleTooltip).to.equal('name4');
+        expect(names[2].width).to.not.exist;
+        expect(names[2].getAttribute('tappable')).to.not.exist;
       });
 
       test('does show extraction-item elements', function() {
-        var items = Polymer.dom(element.root).querySelectorAll('.extraction-item');
+        var items = Polymer.dom(element.root).querySelectorAll('.extraction-item icon-label');
         expect(items).to.exist;
         expect(items.length).to.equal(5);
+
+        expect(items[0].icon).to.equal('');
+        expect(items[0].iconStyleClass).to.equal('');
+        expect(items[0].link).to.not.exist;
+        expect(items[0].target).to.equal('_self');
+        expect(items[0].text).to.equal('text2');
+        expect(items[0].textTitleTooltip).to.equal('text2');
+        expect(items[0].width).to.not.exist;
+        expect(items[0].getAttribute('tappable')).to.exist;
+
+        expect(items[1].icon).to.equal('');
+        expect(items[1].iconStyleClass).to.equal('');
+        expect(items[1].link).to.not.exist;
+        expect(items[1].target).to.equal('_self');
+        expect(items[1].text).to.equal('text3');
+        expect(items[1].textTitleTooltip).to.equal('text3');
+        expect(items[1].width).to.not.exist;
+        expect(items[1].getAttribute('tappable')).to.exist;
+
+        expect(items[2].icon).to.equal('');
+        expect(items[2].iconStyleClass).to.equal('');
+        expect(items[2].link).to.equal('linkA');
+        expect(items[2].target).to.equal('_self');
+        expect(items[2].text).to.equal('text4');
+        expect(items[2].textTitleTooltip).to.equal('Click to Open text4');
+        expect(items[2].width).to.not.exist;
+        expect(items[2].getAttribute('tappable')).to.exist;
+
+        expect(items[3].icon).to.equal('');
+        expect(items[3].iconStyleClass).to.equal('');
+        expect(items[3].link).to.equal('linkB');
+        expect(items[3].target).to.equal('_self');
+        expect(items[3].text).to.equal('text5');
+        expect(items[3].textTitleTooltip).to.equal('Click to Open text5');
+        expect(items[3].width).to.not.exist;
+        expect(items[3].getAttribute('tappable')).to.exist;
+
+        expect(items[4].icon).to.equal('');
+        expect(items[4].iconStyleClass).to.equal('');
+        expect(items[4].link).to.equal('linkC');
+        expect(items[4].target).to.equal('_self');
+        expect(items[4].text).to.equal('text6');
+        expect(items[4].textTitleTooltip).to.equal('Click to Open text6');
+        expect(items[4].width).to.not.exist;
+        expect(items[4].getAttribute('tappable')).to.exist;
       });
 
       test('does show confidence-marker elements', function() {
         var markers = Polymer.dom(element.root).querySelectorAll('confidence-marker');
         expect(markers).to.exist;
         expect(markers.length).to.equal(5);
+
         expect(markers[0].confidence).to.not.exist;
         expect(markers[1].confidence).to.not.exist;
         expect(markers[2].confidence).to.not.exist;
@@ -314,7 +395,8 @@ limitations under the License.
         expect(called).to.be.true;
       });
 
-      test('_updateShowProvenances does set showProvenances', function() {
+      test('_updateShowProvenances does set showProvenances using given extraction', function() {
+        var called = false;
         element._updateShowProvenances({
           detail: {
             value: true
@@ -322,25 +404,32 @@ limitations under the License.
           model: {
             extraction: {
               confidence: 100,
+              text: 'extraction1',
               provenances: [{
-                method: 'provenanceMethod2',
-                text: 'provenanceText2'
+                method: 'method1',
+                text: 'text1'
               }]
             }
+          },
+          stopPropagation: function() {
+            called = true;
           }
         });
 
-        expect(element.showProvenances).to.deep.equal({
+        expect(called).to.be.true;
+        expect(element.showProvenances).to.deep.equal([{
           confidence: 100,
-          data: [{
-            method: 'provenanceMethod2',
-            text: 'provenanceText2'
-          }],
-          id: '1234'
-        });
+          documentId: '1234',
+          extraction: 'extraction1',
+          provenances: [{
+            method: 'method1',
+            text: 'text1'
+          }]
+        }]);
       });
 
-      test('_updateShowProvenances does not set showProvenances if selected (event.detail.value) is false', function() {
+      test('_updateShowProvenances does not set showProvenances using given extraction if selected (event.detail.value) is false', function() {
+        var called = false;
         element._updateShowProvenances({
           detail: {
             value: false
@@ -348,15 +437,125 @@ limitations under the License.
           model: {
             extraction: {
               confidence: 100,
+              text: 'extraction1',
               provenances: [{
-                method: 'provenanceMethod2',
-                text: 'provenanceText2'
+                method: 'method1',
+                text: 'text1'
               }]
             }
+          },
+          stopPropagation: function() {
+            called = true;
           }
         });
 
+        expect(called).to.be.false;
         expect(element.showProvenances).to.not.exist;
+      });
+
+      test('_updateShowProvenances does set showProvenances using given list of extractions', function() {
+        var called = false;
+        element._updateShowProvenances({
+          detail: {
+            value: false
+          },
+          model: {
+            item: {
+              data: [{
+                confidence: 100,
+                text: 'extraction1',
+                provenances: [{
+                  method: 'method1',
+                  text: 'text1'
+                }]
+              }, {
+                confidence: 50,
+                text: 'extraction2',
+                provenances: [{
+                  method: 'method2',
+                  text: 'text2'
+                }]
+              }]
+            }
+          },
+          stopPropagation: function() {
+            called = true;
+          }
+        });
+
+        expect(called).to.be.true;
+        expect(element.showProvenances).to.deep.equal([{
+          confidence: 100,
+          documentId: '1234',
+          extraction: 'extraction1',
+          provenances: [{
+            method: 'method1',
+            text: 'text1'
+          }]
+        }, {
+          confidence: 50,
+          documentId: '1234',
+          extraction: 'extraction2',
+          provenances: [{
+            method: 'method2',
+            text: 'text2'
+          }]
+        }]);
+      });
+
+      test('_updateShowProvenances does work with custom properties', function() {
+        element.dataProperty = 'myData';
+        element.dataConfidenceProperty = 'myConf';
+        element.dataProvenancesProperty = 'myProv';
+        element.dataTextProperty = 'myText';
+
+        var called = false;
+        element._updateShowProvenances({
+          detail: {
+            value: false
+          },
+          model: {
+            item: {
+              myData: [{
+                myConf: 100,
+                myText: 'extraction1',
+                myProv: [{
+                  method: 'method1',
+                  text: 'text1'
+                }]
+              }, {
+                myConf: 50,
+                myText: 'extraction2',
+                myProv: [{
+                  method: 'method2',
+                  text: 'text2'
+                }]
+              }]
+            }
+          },
+          stopPropagation: function() {
+            called = true;
+          }
+        });
+
+        expect(called).to.be.true;
+        expect(element.showProvenances).to.deep.equal([{
+          confidence: 100,
+          documentId: '1234',
+          extraction: 'extraction1',
+          provenances: [{
+            method: 'method1',
+            text: 'text1'
+          }]
+        }, {
+          confidence: 50,
+          documentId: '1234',
+          extraction: 'extraction2',
+          provenances: [{
+            method: 'method2',
+            text: 'text2'
+          }]
+        }]);
       });
 
       test('showProvenances is set if a confidence-marker is selected', function() {
@@ -365,14 +564,15 @@ limitations under the License.
         var markers = Polymer.dom(element.root).querySelectorAll('confidence-marker');
         markers[4].selected = true;
 
-        expect(element.showProvenances).to.deep.equal({
+        expect(element.showProvenances).to.deep.equal([{
           confidence: 50,
-          data: [{
-            method: 'provenanceMethod1',
-            text: 'provenanceText1'
-          }],
-          id: '1234'
-        });
+          documentId: '1234',
+          extraction: 'text6',
+          provenances: [{
+            method: 'method1',
+            text: 'text1'
+          }]
+        }]);
       });
     });
 
