--- a/extraction-grid.html
+++ b/extraction-grid.html
@@ -23,7 +23,6 @@ limitations under the License.
 <link rel="import" href="../iron-icons/iron-icons.html">
 <link rel="import" href="../paper-icon-button/paper-icon-button.html">
 <link rel="import" href="../paper-styles/color.html">
-<link rel="import" href="../paper-styles/default-theme.html">
 <link rel="import" href="../tag-extraction-buttons/tag-extraction-buttons.html">
 
 <!--
@@ -123,6 +122,7 @@ Custom property                            | Description                        
       }
 
       paper-icon-button {
+        color: var(--paper-grey-600);
         height: 20px;
         width: 20px;
         margin-left: 5px;
@@ -131,7 +131,7 @@ Custom property                            | Description                        
       }
 
       paper-icon-button:hover {
-        color: var(--extraction-grid-hover-color, var(--paper-indigo-900));
+        color: var(--paper-grey-900);
       }
 
       .extraction-list:hover paper-icon-button {
