--- a/extraction-grid.html
+++ b/extraction-grid.html
@@ -125,6 +125,7 @@ Custom property                            | Description                        
         color: var(--paper-grey-600);
         height: 20px;
         width: 20px;
+        min-width: 20px;
         margin-left: 5px;
         padding: 0;
         visibility: hidden;
