--- a/extraction-grid.html
+++ b/extraction-grid.html
@@ -16,12 +16,9 @@ limitations under the License.
 
 <link rel="import" href="../polymer/polymer.html">
 <link rel="import" href="../confidence-marker/confidence-marker.html">
-<link rel="import" href="../fontawesome-iconset/fa-all.html">
+<link rel="import" href="../icon-button/icon-button.html">
 <link rel="import" href="../icon-label/icon-label.html">
 <link rel="import" href="../iron-flex-layout/iron-flex-layout-classes.html">
-<link rel="import" href="../iron-icon/iron-icon.html">
-<link rel="import" href="../iron-icons/iron-icons.html">
-<link rel="import" href="../paper-icon-button/paper-icon-button.html">
 <link rel="import" href="../paper-styles/color.html">
 <link rel="import" href="../tag-extraction-buttons/tag-extraction-buttons.html">
 
@@ -121,21 +118,12 @@ Custom property                            | Description                        
         };
       }
 
-      paper-icon-button {
-        color: var(--paper-grey-600);
-        height: 20px;
-        width: 20px;
-        min-width: 20px;
+      icon-button {
         margin-left: 5px;
-        padding: 0;
         visibility: hidden;
       }
 
-      paper-icon-button:hover {
-        color: var(--paper-grey-900);
-      }
-
-      .extraction-list:hover paper-icon-button {
+      .extraction-list:hover icon-button {
         visibility: visible;
       }
 
@@ -247,7 +235,7 @@ Custom property                            | Description                        
                   width="[[_getProperty(item, widthProperty)]]">
                 </icon-label>
 
-                <paper-icon-button icon="icons:help" title="Click to Open Extraction Evidence" on-tap="_updateShowProvenances"></paper-icon-button>
+                <icon-button icon="icons:help" title-tooltip="Click to Open Extraction Evidence" on-tap="_updateShowProvenances"></icon-button>
               </div>
             </template>
 
