set default icon

--- a/extraction-grid.html
+++ b/extraction-grid.html
@@ -699,7 +699,7 @@ Custom property                            | Description                        
     if (property == 'icon' && item[property] == undefined) {
       return 'star';
     }
-    return item ? item[property] : undefined;
+    return item ? item[property] : 'star';
   }
 
   /**
