update UI and version number

--- a/extraction-grid.html
+++ b/extraction-grid.html
@@ -86,7 +86,7 @@ Custom property                            | Description                        
       }
 
       .extraction-list {
-        margin: 10px 10px 0 0;
+        margin: 0 10px 0 0;
         padding: 5px;
         width: auto;
       }
